--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1731,8 +1731,9 @@ comments</property>
       <child>
 	<widget class="GtkCheckButton" id="checkbutton_ask_deletion">
 	  <property name="visible">True</property>
+	  <property name="tooltip" translatable="yes">Ask user if really wants to delete a test</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">Confirm jump/run deletion</property>
+	  <property name="label" translatable="yes">Confirm test deletion</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
@@ -8385,12 +8386,12 @@ If you need more, just repeat the operation later.</property>
 		<widget class="GtkTextView" id="textview1">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="editable">True</property>
+		  <property name="editable">False</property>
 		  <property name="overwrite">False</property>
 		  <property name="accepts_tab">True</property>
 		  <property name="justification">GTK_JUSTIFY_LEFT</property>
 		  <property name="wrap_mode">GTK_WRAP_NONE</property>
-		  <property name="cursor_visible">True</property>
+		  <property name="cursor_visible">False</property>
 		  <property name="pixels_above_lines">0</property>
 		  <property name="pixels_below_lines">0</property>
 		  <property name="pixels_inside_wrap">0</property>
@@ -12623,7 +12624,7 @@ If you need more, just repeat the operation later.</property>
 				      <child>
 					<widget class="GtkButton" id="button_edit_selected_reaction_time">
 					  <property name="visible">True</property>
-					  <property name="tooltip" translatable="yes">Edit selected reacton time</property>
+					  <property name="tooltip" translatable="yes">Edit selected reaction time</property>
 					  <property name="can_focus">True</property>
 					  <property name="relief">GTK_RELIEF_NORMAL</property>
 					  <property name="focus_on_click">True</property>
