--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2344,7 +2344,7 @@ weight</property>
     <widget class="GtkVBox" id="vbox19">
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
+      <property name="spacing">8</property>
 
       <child>
 	<widget class="GtkLabel" id="label1">
@@ -2400,7 +2400,7 @@ weight</property>
 	<widget class="GtkHButtonBox" id="hbuttonbox12">
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_SPREAD</property>
-	  <property name="spacing">0</property>
+	  <property name="spacing">10</property>
 
 	  <child>
 	    <widget class="GtkButton" id="button_cancel">
@@ -8149,7 +8149,7 @@ If you need more, just repeat the operation later.</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">True</property>
-  <property name="resizable">True</property>
+  <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
@@ -8179,7 +8179,7 @@ If you need more, just repeat the operation later.</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
-	      <property name="wrap">False</property>
+	      <property name="wrap">True</property>
 	      <property name="selectable">False</property>
 	      <property name="xalign">0.5</property>
 	      <property name="yalign">0.5</property>
@@ -8200,7 +8200,7 @@ If you need more, just repeat the operation later.</property>
 	  <child>
 	    <widget class="GtkHBox" id="hbox118">
 	      <property name="visible">True</property>
-	      <property name="homogeneous">False</property>
+	      <property name="homogeneous">True</property>
 	      <property name="spacing">8</property>
 
 	      <child>
@@ -11347,6 +11347,7 @@ If you need more, just repeat the operation later.</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
 					  <signal name="cursor_changed" handler="on_treeview_jumps_rj_cursor_changed" last_modification_time="Sat, 28 Jan 2006 18:02:08 GMT"/>
+					  <signal name="button_release_event" handler="on_treeview_button_release_event" last_modification_time="Sun, 21 Oct 2007 23:28:01 GMT"/>
 					</widget>
 				      </child>
 				    </widget>
@@ -12058,6 +12059,7 @@ If you need more, just repeat the operation later.</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
 					  <signal name="cursor_changed" handler="on_treeview_runs_cursor_changed" last_modification_time="Sat, 28 Jan 2006 18:04:24 GMT"/>
+					  <signal name="button_release_event" handler="on_treeview_button_release_event" last_modification_time="Sun, 21 Oct 2007 23:48:39 GMT"/>
 					</widget>
 				      </child>
 				    </widget>
@@ -12653,6 +12655,7 @@ If you need more, just repeat the operation later.</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
 					  <signal name="cursor_changed" handler="on_treeview_runs_interval_cursor_changed" last_modification_time="Sat, 28 Jan 2006 18:04:31 GMT"/>
+					  <signal name="button_release_event" handler="on_treeview_button_release_event" last_modification_time="Sun, 21 Oct 2007 23:48:58 GMT"/>
 					</widget>
 				      </child>
 				    </widget>
@@ -12936,6 +12939,7 @@ If you need more, just repeat the operation later.</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
 					  <signal name="cursor_changed" handler="on_treeview_reaction_times_cursor_changed" last_modification_time="Sun, 04 Mar 2007 19:12:51 GMT"/>
+					  <signal name="button_release_event" handler="on_treeview_button_release_event" last_modification_time="Sun, 21 Oct 2007 23:49:19 GMT"/>
 					</widget>
 				      </child>
 				    </widget>
@@ -13407,6 +13411,7 @@ If you need more, just repeat the operation later.</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
 					  <signal name="cursor_changed" handler="on_treeview_pulses_cursor_changed" last_modification_time="Fri, 21 Apr 2006 16:43:09 GMT"/>
+					  <signal name="button_release_event" handler="on_treeview_button_release_event" last_modification_time="Sun, 21 Oct 2007 23:49:35 GMT"/>
 					</widget>
 				      </child>
 				    </widget>
