--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -10101,19 +10101,17 @@ If you need more, just repeat the operation later.</property>
 				  <property name="right_padding">0</property>
 
 				  <child>
-				    <widget class="GtkButton" id="button_image_test">
+				    <widget class="GtkButton" id="button_image_test_zoom">
 				      <property name="visible">True</property>
 				      <property name="tooltip" translatable="yes">Expand image and show description</property>
 				      <property name="can_focus">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
-				      <signal name="clicked" handler="on_button_image_test_clicked" last_modification_time="Mon, 23 Apr 2007 00:33:41 GMT"/>
+				      <signal name="clicked" handler="on_button_image_test_zoom_clicked" last_modification_time="Wed, 07 Nov 2007 23:48:45 GMT"/>
 
 				      <child>
-					<widget class="GtkImage" id="image2211">
+					<widget class="GtkImage" id="image_test_zoom">
 					  <property name="visible">True</property>
-					  <property name="stock">gtk-help</property>
-					  <property name="icon_size">4</property>
 					  <property name="xalign">0.5</property>
 					  <property name="yalign">0.5</property>
 					  <property name="xpad">0</property>
@@ -10126,24 +10124,6 @@ If you need more, just repeat the operation later.</property>
 				<packing>
 				  <property name="padding">0</property>
 				  <property name="expand">False</property>
-				  <property name="fill">True</property>
-				  <property name="pack_type">GTK_PACK_END</property>
-				</packing>
-			      </child>
-
-			      <child>
-				<widget class="GtkImage" id="image_test_text_available">
-				  <property name="visible">True</property>
-				  <property name="stock">gtk-yes</property>
-				  <property name="icon_size">4</property>
-				  <property name="xalign">0.5</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xpad">0</property>
-				  <property name="ypad">0</property>
-				</widget>
-				<packing>
-				  <property name="padding">0</property>
-				  <property name="expand">True</property>
 				  <property name="fill">True</property>
 				  <property name="pack_type">GTK_PACK_END</property>
 				</packing>
@@ -10543,10 +10523,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_expand_clicked" last_modification_time="Sun, 13 Feb 2005 16:00:22 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image333">
+					    <widget class="GtkImage" id="image_tv_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -10572,10 +10550,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_collapse_clicked" last_modification_time="Sun, 13 Feb 2005 15:56:05 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image330">
+					    <widget class="GtkImage" id="image_tv_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -11111,10 +11087,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_rj_expand_clicked" last_modification_time="Sun, 13 Feb 2005 16:02:37 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image334">
+					    <widget class="GtkImage" id="image_tv_rj_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -11140,10 +11114,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_rj_optimal_clicked" last_modification_time="Sun, 13 Feb 2005 16:03:48 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image335">
+					    <widget class="GtkImage" id="image_tv_rj_fit">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-fit</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -11169,10 +11141,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_rj_collapse_clicked" last_modification_time="Sun, 13 Feb 2005 16:01:36 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image332">
+					    <widget class="GtkImage" id="image_tv_rj_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -11853,10 +11823,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_run_expand_clicked" last_modification_time="Thu, 21 Apr 2005 14:00:22 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image442">
+					    <widget class="GtkImage" id="image_tv_run_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -11882,10 +11850,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_run_collapse_clicked" last_modification_time="Thu, 21 Apr 2005 14:00:12 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image443">
+					    <widget class="GtkImage" id="image_tv_run_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -12420,10 +12386,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_run_interval_expand_clicked" last_modification_time="Wed, 03 May 2006 15:08:15 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image544">
+					    <widget class="GtkImage" id="image_tv_run_interval_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -12449,10 +12413,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_run_interval_optimal_clicked" last_modification_time="Wed, 03 May 2006 15:08:05 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image548">
+					    <widget class="GtkImage" id="image_tv_run_interval_fit">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-fit</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -12478,10 +12440,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_tv_run_interval_collapse_clicked" last_modification_time="Wed, 03 May 2006 15:07:55 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image545">
+					    <widget class="GtkImage" id="image_tv_run_interval_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -12746,10 +12706,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_reaction_time_expand_clicked" last_modification_time="Sun, 04 Mar 2007 19:11:43 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image1966">
+					    <widget class="GtkImage" id="image_reaction_time_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -12775,10 +12733,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_reaction_time_collapse_clicked" last_modification_time="Sun, 04 Mar 2007 19:11:30 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image1967">
+					    <widget class="GtkImage" id="image_reaction_time_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -13176,10 +13132,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_pulse_expand_clicked" last_modification_time="Tue, 21 Aug 2007 07:55:14 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image1475">
+					    <widget class="GtkImage" id="image_pulse_expand">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-in</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -13205,10 +13159,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_pulse_optimal_clicked" last_modification_time="Tue, 21 Aug 2007 07:55:00 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image1476">
+					    <widget class="GtkImage" id="image_pulse_fit">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-fit</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
@@ -13234,10 +13186,8 @@ If you need more, just repeat the operation later.</property>
 					  <signal name="clicked" handler="on_button_pulse_collapse_clicked" last_modification_time="Tue, 21 Aug 2007 07:55:07 GMT"/>
 
 					  <child>
-					    <widget class="GtkImage" id="image1477">
+					    <widget class="GtkImage" id="image_pulse_collapse">
 					      <property name="visible">True</property>
-					      <property name="stock">gtk-zoom-out</property>
-					      <property name="icon_size">1</property>
 					      <property name="xalign">0.5</property>
 					      <property name="yalign">0.5</property>
 					      <property name="xpad">0</property>
