--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12614,7 +12614,6 @@ options</property>
 
 	  <child>
 	    <widget class="GtkLabel" id="label205">
-	      <property name="width_request">250</property>
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">This dialog explains wich ports are suitable to be connected with chronopic</property>
 	      <property name="use_underline">False</property>
@@ -12731,7 +12730,8 @@ options</property>
 	  <child>
 	    <widget class="GtkLabel" id="label467">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">More information on  Chronojump Manual</property>
+	      <property name="label" translatable="yes">More information on Chronojump Manual
+(available at 'docs' on install directory and in Chronojump website)</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -21151,6 +21151,32 @@ comments</property>
 	<packing>
 	  <property name="padding">4</property>
 	  <property name="expand">True</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkLabel" id="label_manual">
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">More information on Chronojump Manual
+(available at 'docs' on install directory and in Chronojump website)</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">False</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
 	  <property name="fill">False</property>
 	</packing>
       </child>
