--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13190,7 +13190,6 @@ options</property>
 
 	  <child>
 	    <widget class="GtkLabel" id="label206">
-	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">&lt;b&gt;Detected&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
@@ -13217,7 +13216,6 @@ options</property>
 	    <widget class="GtkTextView" id="textview_detected">
 	      <property name="width_request">225</property>
 	      <property name="height_request">40</property>
-	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="editable">False</property>
 	      <property name="overwrite">False</property>
@@ -13243,10 +13241,10 @@ options</property>
 	  <child>
 	    <widget class="GtkLabel" id="label467">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">More information on Chronojump Manual
+	      <property name="label" translatable="yes">More information on &lt;b&gt;Chronojump Manual at section 4.5&lt;/b&gt;
 (available at 'docs' on install directory and in Chronojump website)</property>
 	      <property name="use_underline">False</property>
-	      <property name="use_markup">False</property>
+	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap">False</property>
 	      <property name="selectable">False</property>
@@ -21631,9 +21629,9 @@ comments</property>
 	  <child>
 	    <widget class="GtkLabel" id="label_title">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Please touch the platform or click Chronopic button</property>
+	      <property name="label" translatable="yes">Please touch the platform or click Chronopic &lt;i&gt;TEST&lt;/i&gt; button</property>
 	      <property name="use_underline">False</property>
-	      <property name="use_markup">False</property>
+	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap">True</property>
 	      <property name="selectable">False</property>
@@ -21705,10 +21703,10 @@ comments</property>
       <child>
 	<widget class="GtkLabel" id="label_manual">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">More information on Chronojump Manual
+	  <property name="label" translatable="yes">More information on &lt;b&gt;Chronojump Manual at section 4.5&lt;/b&gt;
 (available at 'docs' on install directory and in Chronojump website)</property>
 	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
+	  <property name="use_markup">True</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
 	  <property name="wrap">False</property>
 	  <property name="selectable">False</property>
@@ -22312,6 +22310,46 @@ comments</property>
 	  <property name="fill">False</property>
 	</packing>
       </child>
+    </widget>
+  </child>
+</widget>
+
+<widget class="GtkWindow" id="splash_window">
+  <property name="width_request">320</property>
+  <property name="height_request">240</property>
+  <property name="visible">True</property>
+  <property name="title" translatable="yes">Chonojump</property>
+  <property name="type">GTK_WINDOW_TOPLEVEL</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
+  <property name="modal">False</property>
+  <property name="resizable">False</property>
+  <property name="destroy_with_parent">False</property>
+  <property name="decorated">True</property>
+  <property name="skip_taskbar_hint">False</property>
+  <property name="skip_pager_hint">False</property>
+  <property name="type_hint">GDK_WINDOW_TYPE_HINT_SPLASHSCREEN</property>
+  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
+
+  <child>
+    <widget class="GtkLabel" id="label506">
+      <property name="visible">True</property>
+      <property name="sensitive">False</property>
+      <property name="label" translatable="yes">Loading Chronojump...</property>
+      <property name="use_underline">False</property>
+      <property name="use_markup">False</property>
+      <property name="justify">GTK_JUSTIFY_LEFT</property>
+      <property name="wrap">False</property>
+      <property name="selectable">False</property>
+      <property name="xalign">0.5</property>
+      <property name="yalign">0.5</property>
+      <property name="xpad">0</property>
+      <property name="ypad">0</property>
+      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+      <property name="width_chars">-1</property>
+      <property name="single_line_mode">False</property>
+      <property name="angle">0</property>
     </widget>
   </child>
 </widget>
